--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,6 +26,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.3.9",
+    "@nestjs/websockets": "^9.3.9",
     "@prisma/client": "^4.10.1",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
